2012-12-07  Robby Stephenson  <robby@periapsis.org>

	* Added a config setting for using a Google API key for book searches.

2012-11-21  Robby Stephenson  <robby@periapsis.org>

	* Added VinoXML importer.

2012-11-03  Robby Stephenson  <robby@periapsis.org>

	* Added fetcher for DBLP.org.

2012-09-03  Robby Stephenson  <robby@periapsis.org>

	* Updated Delicious Library importer.

2012-08-26  Robby Stephenson  <robby@periapsis.org>

	* Removed API key configuration for Discogs since it's no longer needed.

2012-08-22  Robby Stephenson  <robby@periapsis.org>

	* Corrected character encoding for DVDfr search.
	* Corrected title vs. original title in DVDfr results.
	* Corrected actor and role order in Allocine fetcher.

2012-08-07  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with adding new fields when importing bibtex (Bug 304767).

2012-07-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.6.

2012-06-10  Robby Stephenson  <robby@periapsis.org>

	* Added simple importer for CIW files from ISI.

2012-05-30  Robby Stephenson  <robby@periapsis.org>

	* Added data sources for IMDB in French, Spanish, German, Italian, and Portuguese.

2012-05-12  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with loading images from Google Book search (Bug 299789).

2012-05-06  Robby Stephenson  <robby@periapsis.org>

	* Added API data source for HathiTrust.

2012-05-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug when using a local image directory for a file that has not yet been saved (Bug 299130).

2012-04-20  Robby Stephenson  <robby@periapsis.org>

	* Added API data sources for Allocine, ScreenRush, FilmStarts, SensaCine, and Beyazperde.

2012-03-23  Robby Stephenson  <robby@periapsis.org>

	* Fixed bugs in IBS.it data source.

2012-03-14  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Springer Link.

2012-03-09  Robby Stephenson  <robby@periapsis.org>

	* Added data source for the Microsoft Academic Search.
