@@ -1,3 +1,7 @@
+2013-01-08  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed a bug with editing the toolbar config in KDE 4.9.2+.
+
 2012-12-07  Robby Stephenson  <robby@periapsis.org>
 
 	* Added a config setting for using a Google API key for book searches.
